# ArchAI

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  FAQ.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  parser.py  pyproject.toml  requirements.txt  test_fastapi.py  verify.py
backend/database/: schema.sql
backend/services/: ai_service.py
backend/tests/: conftest.py  test_api.py  test_parser.py
docs/: API.md  ARCHITECTURE.md  KNOWN_LIMITATIONS.md  PITCH.md  SELF_HOSTING.md
docs/demo/: DEMO_SCRIPT.md
evals/: README.md  datasets.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/workspace/: page.tsx
