[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "archai-backend"
version = "1.0.0"
description = "AI-powered Software Architect backend — transforms repositories into interactive architecture intelligence"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dharmit Shah", email = "dharmit@archai.dev" }]
keywords = ["architecture", "ai", "code-analysis", "dependency-graph", "developer-tools"]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "gitpython>=3.1.43",
    "google-genai>=0.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/dharmitshah/archai"
Repository = "https://github.com/dharmitshah/archai"
"Bug Tracker" = "https://github.com/dharmitshah/archai/issues"
Documentation = "https://github.com/dharmitshah/archai/blob/main/docs/ARCHITECTURE.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = ["venv/*", "tests/*", "verify.py"]

[tool.coverage.report]
show_missing = true
